Updates for J20 to remove warnings.